# zero2prod

./: Cargo.toml  Dockerfile  Procfile  app.json
.config/: config.toml
.github/workflows/: build-and-deploy.yml  general.yml
.sqlx/: query-0f21469cfdd1083482554bd7c032ec5455153e85f2427e600e1a4830b431fecc.json  query-5855da89089a121780f402881551c94851711851bd23a1c6aa7e942bd8622e54.json  query-8331e19e367a63b0c2112d1d8c048dd1a5f0eaa49d265d407a6ffd9469f127ce.json  query-d13f1fc65c80ddaf76c471eea400090ea8c0b5b7266649aeb93e2e33793cd1aa.json
configuration/: base.yaml
migrations/: 20240306111926_create_subscriptions_table.sql  20240329084602_add_status_to_subscriptions.sql  20240329085644_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telementry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
