[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
fake = "2.9"
linkify = "0.10"
rand = "0.8.5"
quickcheck = "1.0.0"
quickcheck_macros = "1.0.0"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
serde_json = "1"

[dependencies]
actix-web = "4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
anyhow = "1"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
claims = "0.7"
config = "0.14"
once_cell = "1"
serde = { version = "1", features = ["derive"]}
serde-aux = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
unicode-segmentation = "1"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
thiserror = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.7"
validator = "0.18"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]
